# qwikpirate

./: CMakeLists.txt  README.md
doc/: Nothing to see here.txt
include/: argv.h  opts.h
src/: CMakeLists.txt  argv.cpp
test/: CMakeLists.txt  cli_test.cpp  main.cpp
